--- a/SierraWorks/Saved/Config/Windows/EditorLayout.ini
+++ b/SierraWorks/Saved/Config/Windows/EditorLayout.ini
@@ -53,40 +53,6 @@ UnrealEd_Layout_v1.4=(\
 		(\
 			"SizeCoefficient": 1,\
 			"Type": "Area",\
-			"Orientation": "Orient_Vertical",\
-			"WindowPlacement": "Placement_Automatic",\
-			"WindowSize_X": 1248,\
-			"WindowSize_Y": 754,\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "None",\
-					"Tabs": [\
-						(\
-							"TabId": "StandaloneToolkit",\
-							"TabState": "ClosedTab"\
-						)\
-					]\
-				),\
-				(\
-					"SizeCoefficient": 0.34999999403953552,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "None",\
-					"Tabs": [\
-						(\
-							"TabId": "MergeTool",\
-							"TabState": "ClosedTab"\
-						)\
-					]\
-				)\
-			]\
-		),\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
 			"Orientation": "Orient_Horizontal",\
 			"WindowPlacement": "Placement_Automatic",\
 			"WindowSize_X": 1248,\
@@ -108,6 +74,43 @@ UnrealEd_Layout_v1.4=(\
 						),\
 						(\
 							"TabId": "PluginsEditor",\
+							"TabState": "ClosedTab"\
+						)\
+					]\
+				)\
+			]\
+		),\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Vertical",\
+			"WindowPlacement": "Placement_Specified",\
+			"WindowPosition_X": 331,\
+			"WindowPosition_Y": 198,\
+			"WindowSize_X": 1248,\
+			"WindowSize_Y": 754,\
+			"bIsMaximized": false,\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "None",\
+					"Tabs": [\
+						(\
+							"TabId": "StandaloneToolkit",\
+							"TabState": "ClosedTab"\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 0.34999999403953552,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "None",\
+					"Tabs": [\
+						(\
+							"TabId": "MergeTool",\
 							"TabState": "ClosedTab"\
 						)\
 					]\
@@ -235,6 +238,87 @@ LevelEditor_Layout_v1.1=(\
 								(\
 									"TabId": "WorldSettingsTab",\
 									"TabState": "ClosedTab"\
+								)\
+							]\
+						)\
+					]\
+				)\
+			]\
+		)\
+	]\
+)
+Standalone_StaticMeshEditor_Layout_v3=(\
+	"Type": "Layout",\
+	"Name": "Standalone_StaticMeshEditor_Layout_v3",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Vertical",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 0.10000000149011612,\
+					"Type": "Stack",\
+					"HideTabWell": true,\
+					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
+					"Tabs": [\
+						(\
+							"TabId": "AssetEditorToolkit_Toolbar",\
+							"TabState": "OpenedTab"\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 0.89999997615814209,\
+					"Type": "Splitter",\
+					"Orientation": "Orient_Horizontal",\
+					"Nodes": [\
+						(\
+							"SizeCoefficient": 0.60000002384185791,\
+							"Type": "Stack",\
+							"HideTabWell": true,\
+							"ForegroundTab": "StaticMeshEditor_Viewport",\
+							"Tabs": [\
+								(\
+									"TabId": "StaticMeshEditor_Viewport",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.20000000298023224,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.5,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "StaticMeshEditor_Properties",\
+									"Tabs": [\
+										(\
+											"TabId": "StaticMeshEditor_Properties",\
+											"TabState": "OpenedTab"\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.5,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "None",\
+									"Tabs": [\
+										(\
+											"TabId": "StaticMeshEditor_SocketManager",\
+											"TabState": "ClosedTab"\
+										),\
+										(\
+											"TabId": "StaticMeshEditor_Collision",\
+											"TabState": "ClosedTab"\
+										)\
+									]\
 								)\
 							]\
 						)\
