--- a/.gitignore
+++ b/.gitignore
@@ -186,7 +186,6 @@ $RECYCLE.BIN/
 *.out
 *.app
 
-
-/SierraWorks/Saved
-/SierraWorks/Config
-/SierraWorks/Intermediate
+/Saved
+/Config
+/Intermediate
