Sedan bördäre jag att koda
jättebra

--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,7 @@ DerivedDataCache/
 Intermediate/
 Saved/
 SierraWorks/Intermediate/CachedAssetRegistry.bin
+SierraWorks/Intermediate/CachedAssetRegistry.bin
+SierraWorks/Content/Sedan/Sedan2.uasset
+SierraWorks/Intermediate/CachedAssetRegistry.bin
+SierraWorks/Intermediate/CachedAssetRegistry.bin
