Sedan better Sedan
: - )

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,4 @@ SierraWorks/Intermediate/CachedAssetRegistry.bin
 SierraWorks/Content/Sedan/Sedan2.uasset
 SierraWorks/Intermediate/CachedAssetRegistry.bin
 SierraWorks/Intermediate/CachedAssetRegistry.bin
+SierraWorks/Intermediate/CachedAssetRegistry.bin
