--- a/SierraWorks/Config/DefaultInput.ini
+++ b/SierraWorks/Config/DefaultInput.ini
@@ -12,6 +12,12 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="SwitchCamera",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ResetVR",Key=R,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Turbo",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WheelMouseUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WheelMouseDown",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MouseLclick",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Key_G",Key=G,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Key_H",Key=H,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Key_J",Key=J,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
@@ -25,6 +31,9 @@ bUseMouseForTouch=False
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="LookRight",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="MouseX",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="MouseY",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="carMove",Key=Z,Scale=1.000000)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 DefaultTouchInterface=/Game/Sedan/SedanVirtualJoysticks.SedanVirtualJoysticks
 ConsoleKey=None
