Editor working and sedan working and going home
yus

--- a/SierraWorks/Config/DefaultEngine.ini
+++ b/SierraWorks/Config/DefaultEngine.ini
@@ -1,11 +1,6 @@
 [URL]
 GameName=SierraWorks
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Example_Map
-GameDefaultMap=/Game/Maps/Example_Map
-GlobalDefaultGameMode=/Game/Blueprints/MyGame.MyGame_C
-
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 [/Script/Engine.Engine]
@@ -47,5 +42,18 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Engine/Maps/Templates/Template_Default
+EditorStartupMap=/Game/Maps/Example_Map
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameDefaultMap=/Engine/Maps/Entry
+GameDefaultMap=/Game/Maps/Example_Map
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=None
+GlobalDefaultServerGameMode=None
 
 
